Fix the spacing of the lasagna page, upgrade the file distribution

--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,7 @@ a {
     background-color: rgb(73, 141, 9);
     margin-top: 10px;
 }
-.font.lasagna {
-    font-size: large;
-    background-color: rgb(41, 41, 41);
-    color: azure;
-}
+
 .obscure-background {
     background-color:rgb(158, 158, 158);
 }
